fix z-index visibilities | chatbot, course-details slider, login

--- a/src/components/Chatbot/Chatbot.css
+++ b/src/components/Chatbot/Chatbot.css
@@ -7,4 +7,5 @@
     bottom: 100px;
     right: 20px;
     cursor: pointer;
+    z-index: 9;
 }
