--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -23,7 +23,7 @@ body {
 }
 
 .navbar-nav button {
-    border: none
+    border: none;
 }
 
 .navbar-nav button:hover {
@@ -38,7 +38,7 @@ body {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.7);
-    z-index: 1;
+    z-index: 10;
 }
 
 .popup-card {
@@ -48,7 +48,7 @@ body {
     transform: translate(-50%, -50%);
     background: white;
     padding: 20px;
-    z-index: 2;
+    z-index: 20 !important;
     width: 25%;
     border-radius: 5%;
 }
@@ -135,6 +135,10 @@ body {
     .login-btn {
         margin: 0 auto;
     }
+
+    .login-red {
+        padding: 2%;
+    }
 }
 
 
@@ -150,6 +154,11 @@ body {
     .login-btn {
         margin: 0 auto;
     }
+
+    .login-red {
+        padding: 1%;
+    }
+
 }
 
 
